[package]
edition = "2021"
keywords = ["ethereum", "web3"]
license = "MIT OR Apache-2.0"
name = "foundry-cli"
readme = "README.md"
repository = "https://github.com/foundry-rs/foundry"
version = "0.2.0"

[build-dependencies]
vergen = {version = "8", default-features = false, features = ["build", "git", "git2"]}

[dependencies]
# foundry internal
cast = {path = "../cast"}
forge = {path = "../forge"}
forge-doc = {path = "../doc"}
forge-fmt = {path = "../fmt"}
foundry-common = {path = "../common"}
foundry-config = {path = "../config"}
foundry-evm = {path = "../evm"}
foundry-utils = {path = "../utils"}
ui = {path = "../ui"}

# eth
ethers = {workspace = true, features = ["rustls"]}
solang-parser.workspace = true

# cli
clap = {version = "4", features = ["derive", "env", "unicode", "wrap_help"]}
clap_complete = "4"
clap_complete_fig = "4"
comfy-table = "6"
dialoguer = {version = "0.10", default-features = false}
dotenvy = "0.15"
reqwest = {version = "0.11", default-features = false, features = [
  "json",
  "rustls",
  "rustls-tls-native-roots",
]}
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter", "fmt"]}
watchexec = "2"
yansi = "0.5"

# async / parallel
async-trait = "0.1"
futures = "0.3"
rayon = "1"
tokio = {version = "1", features = ["macros"]}

# disk / paths
dunce = "1"
path-slash = "0.2"
tempfile = "3"
walkdir = "2"

# misc
bytes = "1.4"
color-eyre = "0.6"
eyre = "0.6"
hex = "0.4"
indicatif = "0.17"
itertools = "0.10"
once_cell = "1"
parking_lot = "0.12"
pkg-config = "0.3.26"
proptest = "1"
regex = {version = "1", default-features = false}
rpassword = "7"
rustc-hex = "2"
semver = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
similar = {version = "2", features = ["inline"]}
strsim = "0.10"
strum = {version = "0.25", features = ["derive"]}
thiserror = "1"

# ring = "0.16.20"
# sha2 = "0.10.6"
# which = "4.2.5"

#zksync
zksync-web3-rs = {git = "https://github.com/lambdaclass/zksync-web3-rs.git", rev = "70327ae5413c517bd4d27502507cdd96ee40cd22"}

ansi_term = "0.12.1"
anyhow = {version = "1.0.70"}
dirs = {version = "5.0.0"}
url = "2.3.1"

chrono = "0.4.31"
ethabi = "18.0.0"
md5 = "0.7.0"
tiny-keccak = {version = "2.0.2", features = ["sha3"]}
uint = "0.9.0"
sha2 = "0.10.8"
pathdiff = "0.2.1"

[dev-dependencies]
anvil = {path = "../anvil"}
criterion = "0.4"
foundry-cli-test-utils = {path = "./test-utils"}
foundry-utils = {path = "./../utils"}
globset = "0.4"
pretty_assertions = "1"
serial_test = "2"
svm = {package = "svm-rs", version = "0.3", default-features = false, features = ["rustls"]}
toml = "0.7"

[features]
default = ["rustls"]
openssl = ["ethers/openssl"]
rustls = ["ethers/rustls"]
solc-asm = ["ethers/solc-sha2-asm"]

# feature for integration tests that test external projects
external-integration-tests = []

[[bin]]
doc = false
name = "zkcast"
path = "src/cast.rs"

[[bin]]
doc = false
name = "zkforge"
path = "src/forge.rs"

[[bench]]
harness = false
name = "forge_test"

[[bench]]
harness = false
name = "cast"
